created html output

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
     <button id="calculate-button" type="button">Kalkuliraj</button>
-
+    <div id="container"></div>
     <script src="js/calculator.js"></script>
     </body>
 </html>
